--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "legacy-lungi-big-landing-page",
+  "name": "legacy_big_landing",
   "version": "0.1.0",
   "private": true,
   "scripts": {
